test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Project_IRR__c.field-meta.xml
<CustomField>
    <fullName>Project_IRR__c</fullName>
    <label>Project IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>