test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Project_NPV_2__c.field-meta.xml
<CustomField>
    <fullName>Project_NPV_2__c</fullName>
    <label>Project NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>