test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Project_NPV__c.field-meta.xml
<CustomField>
    <fullName>Project_NPV__c</fullName>
    <label>zzArchive - Project NPV*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>