test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <displayFormat>P-{0000000}</displayFormat>
    <label>zzArchive - Project Number</label>
    <type>AutoNumber</type>
</CustomField>