test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/ProjectZip__c.field-meta.xml
<CustomField>
    <fullName>ProjectZip__c</fullName>
    <label>Project Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>