test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Punch_List_Items_Complete__c.field-meta.xml
<CustomField>
    <fullName>Punch_List_Items_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - Punch List Items Complete</label>
    <type>Checkbox</type>
</CustomField>