test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/REC_Contracted__c.field-meta.xml
<CustomField>
    <fullName>REC_Contracted__c</fullName>
    <label>REC Contracted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>