test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/REC_Hedge_Offtaker__c.field-meta.xml
<CustomField>
    <fullName>REC_Hedge_Offtaker__c</fullName>
    <label>REC Hedge/Offtaker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>