test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/REC_Pricing_per_MWh__c.field-meta.xml
<CustomField>
    <fullName>REC_Pricing_per_MWh__c</fullName>
    <label>REC Pricing (per MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>