test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Revenue_Rate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Rate__c</fullName>
    <label>Revenue Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>