test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Segment_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Customer_Type__c</fullName>
    <label>Segment/Customer Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>