test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <label>zzArchive - Ship to Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>