test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/SPE_Name__c.field-meta.xml
<CustomField>
    <fullName>SPE_Name__c</fullName>
    <label>SPE Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>