test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Sponsor_NPV__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_NPV__c</fullName>
    <label>Sponsor NPV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>