test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Sponsor_PTIRR__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_PTIRR__c</fullName>
    <label>Sponsor PTIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>