test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/State_Region__c.field-meta.xml
<CustomField>
    <fullName>State_Region__c</fullName>
    <label>Project State / Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>