test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Storage_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Storage_Delivery_Date__c</fullName>
    <label>Storage Delivery Date</label>
    <type>Date</type>
</CustomField>