test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Storage_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Storage_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - Storage Evaluation</label>
    <type>Checkbox</type>
</CustomField>