test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Storage_Included__c.field-meta.xml
<CustomField>
    <fullName>Storage_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - Storage Included</label>
    <type>Checkbox</type>
</CustomField>