test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Storage_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Storage_Proposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - Storage Proposed</label>
    <type>Checkbox</type>
</CustomField>