test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>Structure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>