test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Subsequent_Borrowing_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Borrowing_Amount_1__c</fullName>
    <label>Subsequent Borrowing Amount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>