test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Subsequent_Borrowing_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Borrowing_Date_1__c</fullName>
    <label>Subsequent Borrowing Date 1</label>
    <type>Date</type>
</CustomField>