test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Tax_Equity_ATIRR__c.field-meta.xml
<CustomField>
    <fullName>Tax_Equity_ATIRR__c</fullName>
    <label>Tax Equity ATIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>