test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Tax_Equity_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Equity_Purchase_Amount__c</fullName>
    <label>Tax Equity Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>