test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Tax_Equity_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Equity_Purchase_Date__c</fullName>
    <label>Tax Equity Purchase Date</label>
    <type>Date</type>
</CustomField>