test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Total_Cost_Firm_W__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Firm_W__c</fullName>
    <label>zzArchive - Total Cost Firm $/W</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>