test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Total_kWac__c.field-meta.xml
<CustomField>
    <fullName>Total_kWac__c</fullName>
    <formula>kWac_Rooftop__c + kWac_Canopy__c + kWac_Ground_Mount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>kWac Rooftop+ kWac Canopy+ kWac Ground Mount</inlineHelpText>
    <label>zzArchive - Total kWac</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>