test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Total_kwDC__c.field-meta.xml
<CustomField>
    <fullName>Total_kwDC__c</fullName>
    <label>Total kwDC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>