test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Ultimate_System_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_System_Owner__c</fullName>
    <label>Ultimate System Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>