test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <label>zzArchive - Utility</label>
    <length>150</length>
    <type>Text</type>
</CustomField>