test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Utility_Territory__c.field-meta.xml
<CustomField>
    <fullName>Utility_Territory__c</fullName>
    <label>Utility Territory</label>
    <length>150</length>
    <type>Text</type>
</CustomField>