test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/W_Development__c.field-meta.xml
<CustomField>
    <fullName>W_Development__c</fullName>
    <label>zzArchive - $/W Development</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>