test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X10_Construction_Mobilized__c.field-meta.xml
<CustomField>
    <fullName>X10_Construction_Mobilized__c</fullName>
    <label>(10) Construction Mobilized</label>
    <type>Date</type>
</CustomField>