test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X11_Major_Equipment_Delivered__c.field-meta.xml
<CustomField>
    <fullName>X11_Major_Equipment_Delivered__c</fullName>
    <label>zzArchive (11) Major Equipment Delivered</label>
    <type>Date</type>
</CustomField>