test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X11_Racking_Delivered__c.field-meta.xml
<CustomField>
    <fullName>X11_Racking_Delivered__c</fullName>
    <label>(11) Racking Delivered</label>
    <type>Date</type>
</CustomField>