test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X12_Racking_Installation__c.field-meta.xml
<CustomField>
    <fullName>X12_Racking_Installation__c</fullName>
    <label>(12) Racking Installation</label>
    <type>Date</type>
</CustomField>