test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X12_Structural_Completion__c.field-meta.xml
<CustomField>
    <fullName>X12_Structural_Completion__c</fullName>
    <label>zzArchive - (12) Structural Completion</label>
    <type>Date</type>
</CustomField>