test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X13_Mechanical_14_Substantial__c.field-meta.xml
<CustomField>
    <fullName>X13_Mechanical_14_Substantial__c</fullName>
    <formula>If(isblank( X13_Mechanical_Completion_Achieved__c ),&quot;........................&quot;,
&quot;(13) &quot; &amp;
If(len(text(Month(X13_Mechanical_Completion_Achieved__c))) = 1,
&quot;0&quot; &amp; text(Month( X13_Mechanical_Completion_Achieved__c)),
text(Month( X13_Mechanical_Completion_Achieved__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X13_Mechanical_Completion_Achieved__c))) =1,
&quot;0&quot; &amp; text(Day( X13_Mechanical_Completion_Achieved__c)),
text(Day(X13_Mechanical_Completion_Achieved__c)))
&amp; &quot;/&quot; &amp;
text(Year(X13_Mechanical_Completion_Achieved__c)))

&amp;&quot; &quot; &amp;

If(isblank( X14_Substantial_Completion_Achieved__c ),&quot;......................... &quot;,
&quot;(14) &quot; &amp;
IF(len(text(Month( X14_Substantial_Completion_Achieved__c))) = 1,
&quot;0&quot; &amp; text(Month( X14_Substantial_Completion_Achieved__c)),
text(Month( X14_Substantial_Completion_Achieved__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X14_Substantial_Completion_Achieved__c))) =1,
&quot;0&quot; &amp; text(Day( X14_Substantial_Completion_Achieved__c)),
text(Day( X14_Substantial_Completion_Achieved__c)))
&amp; &quot;/&quot; &amp;
text(Year( X14_Substantial_Completion_Achieved__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzArch(13) Mechanical.. (14) Substantial</label>
    <type>Text</type>
</CustomField>