test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X13_Mechanical_Completion_Achieved__c.field-meta.xml
<CustomField>
    <fullName>X13_Mechanical_Completion_Achieved__c</fullName>
    <label>zzArc(13) Mechanical Completion Achieved</label>
    <type>Date</type>
</CustomField>