test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X13_Module_Installation__c.field-meta.xml
<CustomField>
    <fullName>X13_Module_Installation__c</fullName>
    <label>(13) Module Installation</label>
    <type>Date</type>
</CustomField>