test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X14_Mechanical_Completion__c.field-meta.xml
<CustomField>
    <fullName>X14_Mechanical_Completion__c</fullName>
    <label>(14) Mechanical Completion</label>
    <type>Date</type>
</CustomField>