test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X14_Substantial_Completion_Achieved__c.field-meta.xml
<CustomField>
    <fullName>X14_Substantial_Completion_Achieved__c</fullName>
    <label>zzAr(14) Substantial Completion Achieved</label>
    <type>Date</type>
</CustomField>