test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X15_Final_Comp_Project__c.field-meta.xml
<CustomField>
    <fullName>X15_Final_Comp_Project__c</fullName>
    <formula>If(isblank( X15_Final_Completion_Achieved__c ),&quot;.........................&quot;,
&quot;(15) &quot; &amp;
If(len(text(Month(X15_Final_Completion_Achieved__c))) = 1,
&quot;0&quot; &amp; text(Month( X15_Final_Completion_Achieved__c)),
text(Month( X15_Final_Completion_Achieved__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X15_Final_Completion_Achieved__c))) =1,
&quot;0&quot; &amp; text(Day( X15_Final_Completion_Achieved__c)),
text(Day(X15_Final_Completion_Achieved__c)))
&amp; &quot;/&quot; &amp;
text(Year(X15_Final_Completion_Achieved__c)))

&amp;&quot; &quot; &amp;

If(isblank(Project_Completion__c) ,&quot;........... &quot;,
&quot;(%) &quot; &amp;

text(Project_Completion__c*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzArchive - 15) Final Comp (%) Project</label>
    <type>Text</type>
</CustomField>