test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X15_Final_Completion_Achieved__c.field-meta.xml
<CustomField>
    <fullName>X15_Final_Completion_Achieved__c</fullName>
    <label>zzArchive (15) Final Completion Achieved</label>
    <type>Date</type>
</CustomField>