test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X15_Substantial_Completion__c.field-meta.xml
<CustomField>
    <fullName>X15_Substantial_Completion__c</fullName>
    <label>(15) Substantial Completion</label>
    <type>Date</type>
</CustomField>