test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X16_Placed_in_Service__c.field-meta.xml
<CustomField>
    <fullName>X16_Placed_in_Service__c</fullName>
    <label>(16) Placed in Service</label>
    <type>Date</type>
</CustomField>