test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X17_Final_Completion__c.field-meta.xml
<CustomField>
    <fullName>X17_Final_Completion__c</fullName>
    <label>(17) Final Completion</label>
    <type>Date</type>
</CustomField>