test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X1_Budgetary_2_LOI_Signed__c.field-meta.xml
<CustomField>
    <fullName>X1_Budgetary_2_LOI_Signed__c</fullName>
    <formula>If(isblank(X1_Budgetary_Proposal__c),&quot;........................&quot;,
&quot;(1) &quot; &amp;
If(len(text(Month(X1_Budgetary_Proposal__c))) = 1,
&quot;0&quot; &amp; text(Month( X1_Budgetary_Proposal__c)),
text(Month( X1_Budgetary_Proposal__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X1_Budgetary_Proposal__c))) =1,
&quot;0&quot; &amp; text(Day( X1_Budgetary_Proposal__c)),
text(Day( X1_Budgetary_Proposal__c)))
&amp; &quot;/&quot; &amp;
text(Year( X1_Budgetary_Proposal__c)))

&amp;&quot; &quot; &amp;

If(isblank(X2_LOI_Executed__c),&quot;...................... &quot;,
&quot;(2) &quot; &amp;
IF(len(text(Month( X2_LOI_Executed__c))) = 1,
&quot;0&quot; &amp; text(Month( X2_LOI_Executed__c)),
text(Month( X2_LOI_Executed__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X2_LOI_Executed__c))) =1,
&quot;0&quot; &amp; text(Day( X2_LOI_Executed__c)),
text(Day( X2_LOI_Executed__c)))
&amp; &quot;/&quot; &amp;
text(Year( X2_LOI_Executed__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzArchi(1) Budgetary .....(2) LOI Signed</label>
    <type>Text</type>
</CustomField>