test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X1_Bugetary_Proposal__c.field-meta.xml
<CustomField>
    <fullName>X1_Bugetary_Proposal__c</fullName>
    <label>(1) Bugetary Proposal</label>
    <type>Date</type>
</CustomField>