test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X2_LOI_Executed__c.field-meta.xml
<CustomField>
    <fullName>X2_LOI_Executed__c</fullName>
    <label>(2) LOI Executed</label>
    <type>Date</type>
</CustomField>