test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X3_Firm_Proposal_Submitted__c.field-meta.xml
<CustomField>
    <fullName>X3_Firm_Proposal_Submitted__c</fullName>
    <label>(3) Firm Proposal Submitted</label>
    <type>Date</type>
</CustomField>