test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X4_Project_Awarded_written_evidence__c.field-meta.xml
<CustomField>
    <fullName>X4_Project_Awarded_written_evidence__c</fullName>
    <label>zz(4) Project Awarded (written evidence)</label>
    <type>Date</type>
</CustomField>