test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X5_Approved_6_Site_Cntrl__c.field-meta.xml
<CustomField>
    <fullName>X5_Approved_6_Site_Cntrl__c</fullName>
    <formula>If(isblank( X5_Award_Committee_Approval__c ),&quot;.......................&quot;,
&quot;(5) &quot; &amp;
If(len(text(Month(X5_Award_Committee_Approval__c))) = 1,
&quot;0&quot; &amp; text(Month( X5_Award_Committee_Approval__c)),
text(Month( X5_Award_Committee_Approval__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X5_Award_Committee_Approval__c))) =1,
&quot;0&quot; &amp; text(Day( X5_Award_Committee_Approval__c)),
text(Day(X5_Award_Committee_Approval__c)))
&amp; &quot;/&quot; &amp;
text(Year(X5_Award_Committee_Approval__c)))

&amp;&quot; &quot; &amp;

If(isblank( X6_Site_Control_Executed__c ),&quot; ......................&quot;,
&quot;(6) &quot; &amp;
IF(len(text(Month( X6_Site_Control_Executed__c))) = 1,
&quot;0&quot; &amp; text(Month( X6_Site_Control_Executed__c)),
text(Month( X6_Site_Control_Executed__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X6_Site_Control_Executed__c))) =1,
&quot;0&quot; &amp; text(Day( X6_Site_Control_Executed__c)),
text(Day( X6_Site_Control_Executed__c)))
&amp; &quot;/&quot; &amp;
text(Year( X6_Site_Control_Executed__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzArc(5) Approved ........(6) Site Cntrl</label>
    <type>Text</type>
</CustomField>