test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X5_Award_Committee_Approval__c.field-meta.xml
<CustomField>
    <fullName>X5_Award_Committee_Approval__c</fullName>
    <label>(5) Award Committee Approval</label>
    <type>Date</type>
</CustomField>