test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X6_Site_Control_Executed__c.field-meta.xml
<CustomField>
    <fullName>X6_Site_Control_Executed__c</fullName>
    <label>(6) Site Control Executed</label>
    <type>Date</type>
</CustomField>