test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X7_Estimated_PPA_Contract__c.field-meta.xml
<CustomField>
    <fullName>X7_Estimated_PPA_Contract__c</fullName>
    <label>(7) Estimated PPA Contract</label>
    <type>Date</type>
</CustomField>