test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X7_PPA_EPC_8_Inv_Commit__c.field-meta.xml
<CustomField>
    <fullName>X7_PPA_EPC_8_Inv_Commit__c</fullName>
    <formula>if(isblank( X7_PPA_or_EPC_Contract_Executed__c ),&quot;.......................&quot;,
&quot;(7) &quot; &amp;
If(len(text(Month(X7_PPA_or_EPC_Contract_Executed__c))) = 1,
&quot;0&quot; &amp; text(Month( X7_PPA_or_EPC_Contract_Executed__c)),
text(Month( X7_PPA_or_EPC_Contract_Executed__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X7_PPA_or_EPC_Contract_Executed__c))) =1,
&quot;0&quot; &amp; text(Day( X7_PPA_or_EPC_Contract_Executed__c)),
text(Day(X7_PPA_or_EPC_Contract_Executed__c)))
&amp; &quot;/&quot; &amp;
text(Year(X7_PPA_or_EPC_Contract_Executed__c)))

&amp;&quot; &quot; &amp;

If(isblank( X8_Internal_Investment_Approval__c ),&quot; ......................&quot;,
&quot;(8) &quot; &amp;
IF(len(text(Month( X8_Internal_Investment_Approval__c))) = 1,
&quot;0&quot; &amp; text(Month( X8_Internal_Investment_Approval__c)),
text(Month( X8_Internal_Investment_Approval__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X8_Internal_Investment_Approval__c))) =1,
&quot;0&quot; &amp; text(Day( X8_Internal_Investment_Approval__c)),
text(Day( X8_Internal_Investment_Approval__c)))
&amp; &quot;/&quot; &amp;
text(Year( X8_Internal_Investment_Approval__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzArchiv(7) PPA/EPC...... (8) Inv Commit</label>
    <type>Text</type>
</CustomField>