test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X7_PPA_or_EPC_Contract_Executed__c.field-meta.xml
<CustomField>
    <fullName>X7_PPA_or_EPC_Contract_Executed__c</fullName>
    <label>zzArchiv(7) PPA or EPC Contract Executed</label>
    <type>Date</type>
</CustomField>