test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X8_Internal_Investment_Approval__c.field-meta.xml
<CustomField>
    <fullName>X8_Internal_Investment_Approval__c</fullName>
    <label>(8) Internal Investment Approval</label>
    <type>Date</type>
</CustomField>