test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X9_Estimated_NTP__c.field-meta.xml
<CustomField>
    <fullName>X9_Estimated_NTP__c</fullName>
    <label>(9) Estimated NTP</label>
    <type>Date</type>
</CustomField>