test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X9_Fin_Close_10_Const_Start__c.field-meta.xml
<CustomField>
    <fullName>X9_Fin_Close_10_Const_Start__c</fullName>
    <formula>If(isblank( X9_Financial_Close_Completed__c ),&quot;.......................&quot;,
&quot;(9) &quot; &amp;
If(len(text(Month(X9_Financial_Close_Completed__c))) = 1,
&quot;0&quot; &amp; text(Month( X9_Financial_Close_Completed__c)),
text(Month( X9_Financial_Close_Completed__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X9_Financial_Close_Completed__c))) =1,
&quot;0&quot; &amp; text(Day( X9_Financial_Close_Completed__c)),
text(Day(X9_Financial_Close_Completed__c)))
&amp; &quot;/&quot; &amp;
text(Year(X9_Financial_Close_Completed__c)))

&amp;&quot; &quot; &amp;

If(isblank( X10_Construction_Mobilized__c ),&quot; .........................&quot;,
&quot;(10) &quot; &amp;
IF(len(text(Month( X10_Construction_Mobilized__c))) = 1,
&quot;0&quot; &amp; text(Month( X10_Construction_Mobilized__c)),
text(Month( X10_Construction_Mobilized__c)))
&amp; &quot;/&quot; &amp;
If (len(text(Day( X10_Construction_Mobilized__c))) =1,
&quot;0&quot; &amp; text(Day( X10_Construction_Mobilized__c)),
text(Day( X10_Construction_Mobilized__c)))
&amp; &quot;/&quot; &amp;
text(Year( X10_Construction_Mobilized__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzArc(9) Fin Close..... (10) Const Start</label>
    <type>Text</type>
</CustomField>