test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/X9_Financial_Close_Completed__c.field-meta.xml
<CustomField>
    <fullName>X9_Financial_Close_Completed__c</fullName>
    <label>zzArchive -(9) Financial Close Completed</label>
    <type>Date</type>
</CustomField>