test/force-app/main/default/objects/Opportunity_Snapshot__c/listViews/Leadership_Opportunity_Snapshot.listView-meta.xml
<ListView>
    <fullName>Leadership_Opportunity_Snapshot</fullName>
    <filterScope>Queue</filterScope>
    <label>Leadership</label>
    <queue>Leadership</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>